--- a/tex/References.bib
+++ b/tex/References.bib
@@ -619,3 +619,65 @@
   year={2005},
   publisher={The University of Chicago Press}
 }
+
+% News, noise and fluctuations: An empirical exploration
+@inproceedings{l2009news,
+  title={News, noise and fluctuations: An empirical exploration},
+  author={L'Huillier, Jean-Paul and Lorenzoni, Guido and Blanchard, Olivier J and others},
+  booktitle={2009 Meeting Papers},
+  number={99},
+  year={2009},
+  organization={Society for Economic Dynamics}
+}
+
+% Expectations and the Neutrality of Money
+@article{lucas1972expectations,
+  title={Expectations and the Neutrality of Money},
+  author={Lucas Jr, Robert E},
+  journal={Journal of economic theory},
+  volume={4},
+  number={2},
+  pages={103--124},
+  year={1972},
+  publisher={Citeseer}
+}
+
+% Social value of public information
+@article{morris2002social,
+  title={Social value of public information},
+  author={Morris, Stephen and Shin, Hyun Song},
+  journal={american economic review},
+  volume={92},
+  number={5},
+  pages={1521--1534},
+  year={2002}
+}
+
+% Imperfect common knowledge and the effects of monetary policy
+@misc{woodford2001imperfect,
+  title={Imperfect common knowledge and the effects of monetary policy},
+  author={Woodford, Michael},
+  year={2001},
+  publisher={National Bureau of Economic Research Cambridge, Mass., USA}
+}
+
+% Deconstructing monetary policy surprises—the role of information shocks
+@article{jarocinski2020deconstructing,
+  title={Deconstructing monetary policy surprises—the role of information shocks},
+  author={Jaroci{\'n}ski, Marek and Karadi, Peter},
+  journal={American Economic Journal: Macroeconomics},
+  volume={12},
+  number={2},
+  pages={1--43},
+  year={2020}
+}
+
+% Has forward guidance been effective?
+@article{smith2015has,
+  title={Has forward guidance been effective?},
+  author={Smith, A Lee and Becker, Thealexa},
+  journal={Economic Review-Federal Reserve Bank of Kansas City},
+  volume={57},
+  year={2015},
+  publisher={Federal Reserve Bank of Kansas City}
+}
