--- a/tex/Text/chapter3.tex
+++ b/tex/Text/chapter3.tex
@@ -1,5 +1,7 @@
 \chapter{\textbf{Methodology}} \label{cap:methodology}
 
+The methodology referred to in this chapter concerns the essence of the sentiment index: the lexicons of sentiments
+
 %As stated before, as this is a quantitative and somewhat qualitative analysis, some specific techniques will have to be used.\\
 
 %First, when it comes to an analysis that takes into account the way in which the European Central Bank expresses itself. Thus, it is necessary that the work takes shape around either ECB speeches\footnote{\url{https://www.ecb.europa.eu/press/key/date/html/index.en.html}} or press conferences \footnote{\url{https://www.ecb.europa.eu/press/pr/date/html/index.en.html}}. Regarding the first, this becomes easier, given the fact that the ECB releases the speeches dataset. In relation to the second one, a more robust work is needed.
