--- a/tex/References.bib
+++ b/tex/References.bib
@@ -73,17 +73,7 @@
   year={2007}
 }
 
-% Sentiment lexicons and non-English languages: a survey
-@article{kaity2020sentiment,
-  title={Sentiment lexicons and non-English languages: a survey},
-  author={Kaity, Mohammed and Balakrishnan, Vimala},
-  journal={Knowledge and Information Systems},
-  volume={62},
-  number={12},
-  pages={4445--4480},
-  year={2020},
-  publisher={Springer}
-}
+
 
 % Regularization and Variable Selection via the Elastic Net
 @article{zou2005regularization,
@@ -680,4 +670,97 @@
   volume={57},
   year={2015},
   publisher={Federal Reserve Bank of Kansas City}
+}
+
+% News vs. sentiment: Predicting stock returns from news stories
+@article{heston2017news,
+  title={News vs. sentiment: Predicting stock returns from news stories},
+  author={Heston, Steven L and Sinha, Nitish Ranjan},
+  journal={Financial Analysts Journal},
+  volume={73},
+  number={3},
+  pages={67--83},
+  year={2017},
+  publisher={Taylor \& Francis}
+}
+
+% Mining and summarizing customer reviews
+@inproceedings{hu2004mining,
+  title={Mining and summarizing customer reviews},
+  author={Hu, Minqing and Liu, Bing},
+  booktitle={Proceedings of the tenth ACM SIGKDD international conference on Knowledge discovery and data mining},
+  pages={168--177},
+  year={2004}
+}
+
+% On the negativity of negation
+@inproceedings{potts2010negativity,
+  title={On the negativity of negation},
+  author={Potts, Christopher},
+  booktitle={Semantics and Linguistic Theory},
+  volume={20},
+  pages={636--659},
+  year={2010}
+}
+
+% Natural language processing
+@article{liddy2001natural,
+  title={Natural language processing},
+  author={Liddy, Elizabeth D},
+  year={2001}
+}
+
+% Sentiment lexicons and non-English languages: a survey
+@article{kaity2020sentiment,
+  title={Sentiment lexicons and non-English languages: a survey},
+  author={Kaity, Mohammed and Balakrishnan, Vimala},
+  journal={Knowledge and Information Systems},
+  volume={62},
+  number={12},
+  pages={4445--4480},
+  year={2020},
+  publisher={Springer}
+}
+
+% A survey of sentiment lexicons
+@article{ahire2014survey,
+  title={A survey of sentiment lexicons},
+  author={Ahire, Sagar},
+  journal={Computer Science and Engineering IIT Bombay, Bombay},
+  year={2014}
+}
+
+% Building a sentiment lexicon for Swedish
+@inproceedings{nusko2016building,
+  title={Building a sentiment lexicon for Swedish},
+  author={Nusko, Bianka and Tahmasebi, Nina and Mogren, Olof},
+  booktitle={Digital Humanities 2016. From Digitization to Knowledge 2016: Resources and Methods for Semantic Processing of Digital Works/Texts, Proceedings of the Workshop, July 11, 2016, Krakow, Poland},
+  number={126},
+  pages={32--37},
+  year={2016},
+  organization={Link{\"o}ping University Electronic Press}
+}
+
+% New avenues in opinion mining and sentiment analysis
+@article{cambria2013new,
+  title={New avenues in opinion mining and sentiment analysis},
+  author={Cambria, Erik and Schuller, Bj{\"o}rn and Xia, Yunqing and Havasi, Catherine},
+  journal={IEEE Intelligent systems},
+  volume={28},
+  number={2},
+  pages={15--21},
+  year={2013},
+  publisher={IEEE}
+}
+
+% Sentiment analysis algorithms and applications: A survey
+@article{medhat2014sentiment,
+  title={Sentiment analysis algorithms and applications: A survey},
+  author={Medhat, Walaa and Hassan, Ahmed and Korashy, Hoda},
+  journal={Ain Shams engineering journal},
+  volume={5},
+  number={4},
+  pages={1093--1113},
+  year={2014},
+  publisher={Elsevier}
 }
