--- a/tex/Text/chapter2.tex
+++ b/tex/Text/chapter2.tex
@@ -6,8 +6,19 @@ Working with quantitative and qualitative data simultaneously is one of the bene
 
 \section{Measuring News Sentiment}
 
-In a recent study, \cite{shapiro2020measuring} presents new evidence that incorporate NLP techniques into economic science. According to the authors, it was possible to obtain a sentiment index that matched the Michigan Consumer Sentiment Index (MCSI)\footnote{\url{http://www.sca.isr.umich.edu/}}, from economic articles and assessed financials. In terms of methodology, it would then be possible to obtain an index of consumer sentiment through selected journals and textual sentiment analysis techniques. Two studies were proposed: first, it would be analyzed whether the sentiment index elaborated by the authors would be a good predictor variable for real economic variables. For this exercise, the authors used three models of variable selection as a methodological approach: a LASSO, an Adaptive LASSO and a Group LASSO. The variable selection models showed that the sentiment index is significant in the predictor aspect, even when compared to the Michigan Consumer Sentiment Index, the LASSO Group points out the authors' index (based on sentiment techniques) as superior in some models ``Specifically, at least one of the LASSO versions prefers the news sentiment measure in forecasts of employment, output (IP), inflation, the real rate (FFR), and the S\&P 500'' \cite[p. 26]{shapiro2020measuring}. The economic variables used for this study were: employment, output, inflation, the real rate, the consumption, the S\&P 500, the MCSI, and the Conference Board's Consumer Confidence index, in addition to the authors' sentiment index.\\
+In a recent study, \cite{shapiro2020measuring} presents new evidence that incorporate NLP techniques into economic science. According to the authors, it was possible to obtain a sentiment index that matched the Michigan Consumer Sentiment Index (MCSI)\footnote{\url{http://www.sca.isr.umich.edu/}}, from economic articles and assessed financials. In terms of methodology, it would then be possible to obtain an index of consumer sentiment through selected journals and textual sentiment analysis techniques.\\
 
+The authors start from the lexicons GI \cite[]{heston2017news}, LM \cite[]{loughran2011liability}, and HL \cite[]{hu2004mining} and test their predictive capacity against human ratings and from there, classify the models of according to goodness-of-fit measures. The LM and HL lexicons obtained similar and superior results compared to GI. Once this is done, the authors also consider the union of the three lexicons, so that human ratings are now tested against ``GI + LM + HL lexicon'' \cite[p. 13]{shapiro2020measuring}. The authors still use VADER \cite[]{hutto2014vader} due to its predictive ability and its ``negation rule'' \cite[]{potts2010negativity}, unfortunately, the authors point out ``Vader is designed for the social-media domain, not the
+economics/ finance domain'' \cite[p. 14]{shapiro2020measuring}.\\
+
+For a solution around the predictability of lexicons, the authors decide to create their own lexicon, through their composition (and the inclusion of VADER's negation terms). Having done that, the article then proposes the creation of a sentiment index based on this lexicon, so that a monthly sentiment index was estimated from fixed effects ($\hat{f}_{t(a)}$ ), given the regression:
+
+\begin{align*}
+    s_a = f_{p(a), j(a)} + \varepsilon_a \quad ,
+\end{align*}
+where $s_a$ is the net positivity score for article $a$ and $f_{t(a)}$ is a sample-month ($t$) fixed effect. Newspapers are indexed by $j$ and article type -- either editorial or regular article -- is indexed by $p$ \cite[p. 20]{shapiro2020measuring}. So, $f_{p(a), j(a)}$ is the fixed effect of newspaper*type: this ensures that the index is independent of changes over time, relative to its composition of newspapers and editorials, when compared to regular articles. This might be significant, as the tone of articles varies greatly between newspapers and between editorials and ordinary articles within a newspaper.\\
+
+Two main studies were proposed: first, it would be analyzed whether the sentiment index elaborated by the authors would be a good predictor variable for real economic variables. For this exercise, the authors used three variable selection models as a methodological approach: a LASSO, an Adaptive LASSO, and a Group LASSO. Variable selection models showed that the sentiment index is significant in the predictor aspect, even when compared to the Michigan Consumer Sentiment Index, the LASSO Group points out the authors' index (based on sentiment techniques) as superior in some models ` `Specifically, at least one of the versions of LASSO prefers the measure of news sentiment in forecasts of employment, output (IP), inflation, real rate (FFR) and S\&P 500'' \cite[p. 26]{shapiro2020measurement}. The economic variables used for this study were: employment, output, inflation, real rate, consumption, S\&P 500, MCSI and Conference Board Consumer Confidence Index, in addition to the authors' sentiment index.\\
 In a second exercise carried out by the authors, it was analyzed how economic activity would react to a positive shock in the sentiment index. Unlike the conventional method (from an autoregressive vector), the impulse response functions were obtained through local projections \cite{jorda2005estimation} (similar to VAR, but with a less restrictive approach). The results obtained demonstrate that a positive shock in the sentiment index would lead to a slight increase in consumption, in the economy's output, in the real interest rate and in the price level. In addition to these results, impulse responses were also estimated for the Michigan Consumer Sentiment Index and the Conference Board's Consumer Confidence index (CBCI). When analyzing the responses of economic activity to the MCSI, the economic variables (with the exception of the interest rate that responds positively) were not statistically significant. When analyzing the responses of the economic variables to a CBCI choue, the results are similar to the results obtained with the authors' sentiment index -- the responses of the economic variables are statistically significant and point to a slight increase.\\
 
 From economic articles, then, it is possible to analyze and better understand the economic situation. The extraction of a sentiment index through NLP techniques also saves the time and funds needed to obtain an index of this content. With the passage of time, the NLP techniques will evolve, allowing, thus, an improvement in the computational field and in the part of sentiment analysis applied to the economy.\\
