--- a/tex/main.tex
+++ b/tex/main.tex
@@ -74,7 +74,7 @@ BoldItalicFont=GARA.ttf,
 \usepackage{indentfirst}
 
 \title{Clustering three-way data structures: \protect \linebreak a time series approach}
-\author{Marta Dainovich}
+\author{Gustavo de Oliveira Vital}
 \date{\today}
 
 
@@ -141,12 +141,12 @@ BoldItalicFont=GARA.ttf,
 \bibliographystyle{apacite}
 \bibliography{References.bib}
 
-\newpage 
+%\newpage 
 
-\chapter*{Appendix}
-\addcontentsline{toc}{chapter}{Appendix}
-\renewcommand*{\thesection}{\Alph{section}}
-\input{Text/Appendix.tex}
+%\chapter*{Appendix}
+%\addcontentsline{toc}{chapter}{Appendix}
+%\renewcommand*{\thesection}{\Alph{section}}
+%\input{Text/Appendix.tex}
 
 
 
