--- a/tex/Text/chapter3.tex
+++ b/tex/Text/chapter3.tex
@@ -1,26 +1,18 @@
 \chapter{\textbf{Methodology}} \label{cap:methodology}
 
-The methodology referred to in this chapter concerns the essence of the sentiment index: the lexicons of sentiments
+The traditional approach in terms of economic sentiment is the construction of sentiment indices through surveys \cite[p. 4]{shapiro2020measuring}. Usually, these surveys are monthly, with interviews and even verification of the interviewees' personal finances \cite[p. 5]{shapiro2020measuring}. The idea of this work is to obtain a sentiment index through sentiment analysis and Natural Language Processing techniques.
 
-%As stated before, as this is a quantitative and somewhat qualitative analysis, some specific techniques will have to be used.\\
+\section{Natural Language Processing}
 
-%First, when it comes to an analysis that takes into account the way in which the European Central Bank expresses itself. Thus, it is necessary that the work takes shape around either ECB speeches\footnote{\url{https://www.ecb.europa.eu/press/key/date/html/index.en.html}} or press conferences \footnote{\url{https://www.ecb.europa.eu/press/pr/date/html/index.en.html}}. Regarding the first, this becomes easier, given the fact that the ECB releases the speeches dataset. In relation to the second one, a more robust work is needed.
+According to \cite{liddy2001natural}, Natural Language Processing (NLP) is a computational approach to textual analysis that is based on both a set of theories and a set of technologies. In other words, by the formal definition, ``Natural Language Processing is a theoretically motivated range of computational techniques for analyzing and representing naturally occurring texts at one or more levels of linguistic analysis for the purpose of achieving human-like language processing for a range of tasks or applications'' \cite[p. 2]{liddy2001natural}. The purpose of this tool is, therefore, ``to accomplish human-like language processing''. In general, the classification of a text, phrase, or even word is given categorically according to its positivity (positive, negative, neutral), or through valence scores, from 1 to 5. ``The sentiment of text is a measure of the speaker's tone, attitude, or evaluation of a topic, independent of the topic's own sentiment orientation (e.g., a horror movie can be `delightful')'' \cite[p. 5]{shapiro2020measuring}.\\
 
-%\section{Data} \label{sec:data}
+The present work will use lexical-based NLP techniques. ``At this level, humans, as well as NLP systems, interpret the meaning of individual words. Several types of processing contribute to word-level understanding – the first of these being assignment of a single part-of-speech tag to each word. In this processing, words that can function as more than one part-of-speech are assigned the most probable part-of-speech tag based on the context in which they occur'' \cite[p.7]{liddy2001natural}. Still, ``Additionally at the lexical level, those words that have only one possible sense or meaning can be replaced by a semantic representation of that meaning. The nature of the representation varies according to the semantic theory utilized in the NLP system. The following representation of the meaning of the word launch is in the form of logical predicates. As can be observed, the single lexical unit is decomposed into its more basic properties. Given that there is a set of semantic primitives used across all words, these simplified lexical representations make it possible to unify meaning across words and to produce complex interpretations, much the same as humans do'' \cite[p.7]{liddy2001natural}\\
 
-%Given that the format in which press conferences are found on the European central bank website is unstructured (texts are not organized in a database, for example), a more alternative approach to obtaining textual data is needed. Web scraping is the alternative that allows to obtain these data in a computational way, without having to do the gruelling work of locating link by link, copying the text, storing, and organizing it.\\
 
-%The basic principle of web scraping is to locate specific tags in HTML that make it possible to locate and obtain data, through an algorithm that instructs the computer to do this. After obtaining the tags and texts, the selected texts (or web pages) are stored in a dataset and organize the data. This technique would be used to obtain ECB press conferences. After the organization of the database, natural language processes are used for the analysis of textual documents.\\
-
-%The other basic required time series (relating to macroeconomic variables) are available on the FRED website and are real output growth, output gap, unemployment, natural unemployment, inflation (consumer price index), and consumer confidence\footnote{The variables “natural unemployment” and “output gap” for being unobservable would be obtained from the Hodrick-Prescott filter}.
-
-%\section{Tokenization} \label{sec:tokenization}
-
-%Tokenization is basically the division of a sentence, sentence, paragraph, or an entire text document into smaller units, such as individual words or even terms. Each of these smaller units is called tokens.\\
-
-%From tokenization it is possible to count specific words, specific textual expressions and analyse how variations of words and expressions can indicate specific and relevant periods in terms of conjecture or economic structure. For example, given the term “inflation target”, from tokenization it is possible to visualize the appearance of this term in ECB press conferences - it would be plausible to question whether the appearance of certain terms appear more in times of recessions or expansions of the economic cycle.\\
 
 \section{Sentiment Lexicons} \label{sec:lexicons}
+One of the most adopted and valuable resources for sentiment analysis is the use of sentiment lexicons \cite[]{ahire2014survey, nusko2016building, cambria2013new, kaity2020sentiment}. A sentiment lexicon is a collection of words (sometimes referred to as polar or opinion words) linked to their sentiment orientation, that is, positive or negative \cite{kaity2020sentiment, medhat2014sentiment}
+
 
 \subsection{Polarity-based Lexicons} \label{subsec:polbas}
 \subsection{Valence-based Lexicons}
